Fix nav z-index and overflow issue.

--- a/styles_main.css
+++ b/styles_main.css
@@ -151,6 +151,7 @@ audio::-webkit-media-controls-time-remaining-display
     background-color: var(--main-primary-color);
     width: 100%;
     height: 4rem;
+    z-index: 99;
 }
 .nav-button
 {
@@ -278,6 +279,8 @@ audio::-webkit-media-controls-time-remaining-display
     justify-content:center;
     align-content: center;
     align-items: center;
+    overflow: hidden;
+    position: relative;
 }
 
 #GameSelector
